--- a/02b.html
+++ b/02b.html
@@ -6,7 +6,22 @@
     <title>텍스트 처리</title>
 </head>
 <body>
-    충남대학교 한문학과 <br>
+    스타일 정하기<br>
+
+    <style>
+        b { color:#FF0000;}
+        u { color:#0000FF;}
+        body { background-color: #FFFF00;}
+
+        .CNU { 
+            color:#FF00FF;
+            text-decoration:underline;
+        }
+
+    </style>
+
+
+    충남대학교 &nbsp; &nbsp; &nbsp; &nbsp; 한문학과 <br>
     <b>충남대학교 Bold</b> 한문학과 <br>
     충남대학교 <u>한문학과 UnderLine</u> <br>
     <i>충남대학교 italic</i> 한문학과 <br>
@@ -14,7 +29,7 @@
     <!-- 주석 Comment 
         색 : RGB 00 ~ FF
     -->
-    <font color="#FF0000"></font>충남대학교 한문학과 <br>
+    <font color="#FF0000">RED</font>충남대학교 한문학과 <br>
     충남대학교 한문학과 <br>
     충남대학교 한문학과 <br>
     <p class="CNU">Paragraph 문단 충남대학교 한문학과 <br>
