--- a/09.html
+++ b/09.html
@@ -26,6 +26,88 @@
             </div>
         </div>
 
+        <div class="row">
+          <div class="col-2">
+            <img src="data/images/man.png" class="img-fluid">
+          </div>
+          <div class="col">
+            <img src="data/images/man.png" class="img-fluid rounded-5">
+          </div>
+          <div class="col">
+            <img src="data/images/woman.png" class="img-fluid rounded">
+          </div>
+        </div>
+
+        <div class="row">
+          <div class="col">ID</div>
+          <div class="col">
+            <input type="text" class="form-control">
+          </div>
+          <div class="col">
+            <input type="text" class="form-control" placeholder="아이디 입력">
+          </div>
+          <div class="col"></div>
+        </div>
+
+        <div class="row">
+          <div class="col">비번</div>
+          <div class="col">
+            <input type="password" class="form-control" placeholder="비밀번호 입력">
+          </div>
+          <div class="col">숫자</div>
+          <div class="col">
+            <input type="number" value="3" min="0" max="15" step="1" class="form-control" placeholder="비밀번호 입력">
+          </div>
+        </div>
+
+        <div class="row">
+          <div class="col">Email</div>
+          <div class="col">
+            <input type="email" class="form-control" placeholder="비밀번호 입력">
+          </div>
+          <div class="col">URL</div>
+          <div class="col">
+            <input type="url"  class="form-control" placeholder="비밀번호 입력">
+          </div>
+        </div>
+
+        <div class="row">
+          <div class="col">color</div>
+          <div class="col">
+            <input type="color" class="form-control" placeholder="비밀번호 입력">
+          </div>
+          <div class="col">date</div>
+          <div class="col">
+            <input type="date"  class="form-control" placeholder="비밀번호 입력">
+          </div>
+        </div>
+        <div class="row">
+          <div class="col">지역</div>
+          <div class="col">
+            <select class="form-control">
+              <option>-- 선택 --</option>
+              <option>서울</option>
+              <option selected>대전</option>
+              <option>기타</option>
+            </select>  
+          <div class="col">radio</div>
+          <div class="col">
+            M <input type="radio" name="gender" value="1"> 
+            F <input type="radio" name="gender" value="2" checked> 
+          </div>
+        </div>
+
+        
+        <div class="row">
+          <div class="col-2">메모</div>
+          <div class="col">
+            <textarea class="form-control" rows="10">
+              충남대학교
+              한문학과
+            </textarea>
+          </div>
+        </div>
+
     </div>
  
 </body>
