--- a/13.html
+++ b/13.html
@@ -47,6 +47,18 @@
             resultDiv.innerHTML = message;
             
         });
+
+        // 마커가 표시될 위치입니다 
+        var markerPosition  = new kakao.maps.LatLng(36.36838856755299, 127.3427690403397); 
+
+        // 마커를 생성합니다
+        var marker = new kakao.maps.Marker({
+            position: markerPosition
+        });
+
+        // 마커가 지도 위에 표시되도록 설정합니다
+        marker.setMap(map);
+
         </script>
       </div>
     </div> 
